--- a/estilos.css
+++ b/estilos.css
@@ -1,17 +1,33 @@
 body {
-    background-color: #f1f1f1;
+    background-color: #f1f1f19f;
     margin: 5px;
     padding: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 table, th, td	{
-    border: 1px solid black;
+    border: 2px solid black;
+    border-radius: 5px;
     
 }
 table {
     width: 90%;
     border-collapse: collapse;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    
+    
 }
 tbody {
     text-align: center;
 }
+thead {
+    background-color: #f1f1f1;
+    color: black;
+    text-align: center;
+}
+th {
+    padding: 5px;
+}
+td {
+    padding: 5px;
+}   
